[package]
name = "lunar-pay-wasm"
version = "0.0.0"
authors = [ "contact@esdt.space",]
edition = "2018"
publish = false

[lib]
crate-type = [ "cdylib",]

[workspace]
members = [ ".",]

[dev-dependencies]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.lunar-pay]
path = ".."

[dependencies.multiversx-sc-wasm-adapter]
version = "0.43.3"